# isoft-os-prober

./: .gitignore  CMakeLists.txt  README
daemon/: CMakeLists.txt  daemon.c  daemon.h  extensions.c  main.c
data/: CMakeLists.txt  isoft-os-prober-daemon.service.in  org.isoftlinux.OSProber.conf  org.isoftlinux.OSProber.service.in
po/: CMakeLists.txt  isoftosprober.pot
test/: CMakeLists.txt  test-os-prober.c
